--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="col-md-3"></div>
       </div>
     <div class="row">
-    <div class="col-md-12" id="crystals">
+    <div id="crystals">
     </div>
       </div>
       <div class="row">
